# CoreQ

./: README.md
CoreQ/: .gitignore  CMakeLists.txt  PageFactory.h  callbackdemowidget.cpp  callbackdemowidget.h  httpmanager.cpp  httpmanager.h  httpwidget.cpp  httpwidget.h  main.cpp  mysrc.qrc  qpromise.cpp  qpromise.h  qsetting.cpp  qsetting.h  vcpkg.json  widget.cpp  widget.h
CoreQ/AdvancedFunction/: CMakeLists.txt  qstatemachinewindow.cpp  qstatemachinewindow.h
CoreQ/CoreNote/: 2025年6月8日.md  PatternEditor.txt  TrackContentWidget.md  TrackView.md  class diagram.vsdx  note.docx
CoreQ/DataProcess/: CMakeLists.txt  jsonwidget.cpp  jsonwidget.h
CoreQ/DesignPatternsPrinciples/: CMakeLists.txt  CRP.h  DIP.h  ISP.h  LOD.h  LSP.h  OCP.h  SRP.h
CoreQ/DesignPrinciples/: CMakeLists.txt  CRP.h  DIP.h  ISP.h  LOD.h  LSP.h  OCP.h  SRP.h
CoreQ/MVxDemo/: CMakeLists.txt  SimpleModel.h  SimpleModelExample.cpp  mvcwidget.cpp  mvcwidget.h  mvpwidget.cpp  mvpwidget.h  mvvmwidget.cpp  mvvmwidget.h  mvxdemowidget.cpp  mvxdemowidget.h
CoreQ/ModernCpp/: CMakeLists.txt  moderncppwidget.cpp  moderncppwidget.h
CoreQ/ThreadingDemo/: CMakeLists.txt  Qt_vs_STL_Comparison.md  conditionvariablewidget.cpp  conditionvariablewidget.h  mutexdemowidget.cpp  mutexdemowidget.h  qpromise.cpp  qpromise.h  qtconcurrentwidget.cpp  qtconcurrentwidget.h  qtdiningphilosopherswidget.cpp  qtdiningphilosopherswidget.h  qtparallelmapwidget.cpp  qtparallelmapwidget.h  qtpipelinewidget.cpp  qtpipelinewidget.h  qtproducerconsumerwidget.cpp  qtproducerconsumerwidget.h  qtreaderswriterswidget.cpp  qtreaderswriterswidget.h  qtthreadbasicswidget.cpp  qtthreadbasicswidget.h  stdthreadwidget.cpp  stdthreadwidget.h  threadingdemowidget.cpp  threadingdemowidget.h
